--- a/style.css
+++ b/style.css
@@ -3,3 +3,18 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    min-height: 100vh;
+    width: 100%;
+}
+
+.container {
+    margin: 2em auto;
+    width: 90%;
+    max-width: 40em;
+    min-height: 30em;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 1fr);
+}
