--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@
 body {
     min-height: 100vh;
     width: 100%;
+    padding: 1em;
 }
 
 .container {
-    margin: 2em auto;
+    margin: 0em auto;
     width: 90%;
     max-width: 40em;
     min-height: 35em;
