--- a/style.css
+++ b/style.css
@@ -8,19 +8,24 @@ body {
     min-height: 100vh;
     width: 100%;
     padding: 1em;
+    display: grid;
+    place-items: center;
 }
 
 .container {
     margin: 0em auto;
     width: 90%;
-    max-width: 960px;
+    max-width: 500px;
     min-height: 35em;
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
     border: 1px solid black;
 }
 
 .square {
     border: 0.1em solid rgba(0, 0, 0, 0.815);
+}
+
+.hovered {
+    background-color: black;
+    transition: all .3s ease;
 }
